[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[project]
authors = [{name = "Fábio Macêdo Mendes", email = "fabiomacedomendes@gmail.com"}]
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
license = {file = "LICENSE"}
name = "maestro.calendar"

[project.urls]
Home = "http://github.com/fabiommendes/maestro"

[project.optional-dependencies]
cli = ["click >= 8.0"]

[project.scripts]
maestro-calendar = "maestro.calendar.cli:main"
